# NetworkedSyncboxes

./: .gitignore  CMakeLists.txt
FreiburgNetworkedSyncbox/: CMakeLists.txt  installer.sh
FreiburgNetworkedSyncbox/example/: testclient  testinputs.txt
FreiburgNetworkedSyncbox/src/: FreiburgNetworkSyncBox.cpp  FtdCard.cpp
UPennNetworkedSyncbox/: CMakeLists.txt  installer.sh  liblabjackusb-2.7.0.dylib  libusb-1.0.dylib
UPennNetworkedSyncbox/example/: testclient  testclient2  testinputs.txt  testrun
UPennNetworkedSyncbox/src/: Config.cpp  Plugin.cpp  Plugin.h  UPennNetworkSyncbox.cpp  u3.c  u3.h  u3Extended.c  u3Extended.h
example/: testconf.csv  testrun
includes/: NetClient.h  Utils.cpp  Utils.h
src/: Config.cpp  FtdCard.cpp  FtdCard.h  Utils.h
